updated email address in artifacts

--- a/javadocs/com/splunk/logging/SplunkHECInput.html
+++ b/javadocs/com/splunk/logging/SplunkHECInput.html
@@ -105,7 +105,7 @@
 extends <a href="../../../com/splunk/logging/SplunkInput.html" title="class in com.splunk.logging">SplunkInput</a></pre>
 <div class="block">Common HEC logic shared by all appenders/handlers</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
