--- a/javadocs/com/splunk/logging/SplunkLogEvent.html
+++ b/javadocs/com/splunk/logging/SplunkLogEvent.html
@@ -119,7 +119,7 @@ extends java.lang.Object</pre>
  
  </pre></div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd>
+  <dd>Damien Dallimore damien@baboonbones.com</dd>
 <dt><span class="strong">See Also:</span></dt><dd><a href=
       "http://docs.splunk.com/Documentation/Splunk/latest/Knowledge/UnderstandandusetheCommonInformationModel">
       Splunk CIM</a>, 
