--- a/javadocs/com/splunk/logging/SplunkLogEventFactory.html
+++ b/javadocs/com/splunk/logging/SplunkLogEventFactory.html
@@ -112,7 +112,7 @@ extends java.lang.Object</pre>
  
  </code></div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
