--- a/javadocs/com/splunk/logging/examples/Example.html
+++ b/javadocs/com/splunk/logging/examples/Example.html
@@ -103,7 +103,7 @@ extends java.lang.Object</pre>
  For this example I am using the SLF4J facade, and you can plug in jdk logging, log4j or logback as the implementation.
  </pre></div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
