--- a/javadocs/com/splunk/logging/jdk/handler/SplunkFormatter.html
+++ b/javadocs/com/splunk/logging/jdk/handler/SplunkFormatter.html
@@ -105,7 +105,7 @@
 extends java.util.logging.Formatter</pre>
 <div class="block">Custom formatter that simply echos the logged message</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
