--- a/javadocs/com/splunk/logging/log4j/appender/SplunkRestAppender.html
+++ b/javadocs/com/splunk/logging/log4j/appender/SplunkRestAppender.html
@@ -109,7 +109,7 @@
 extends org.apache.log4j.AppenderSkeleton</pre>
 <div class="block">Log4j Appender for sending events to Splunk via REST</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
