--- a/javadocs/com/splunk/logging/logback/appender/SplunkRestAppender.html
+++ b/javadocs/com/splunk/logging/logback/appender/SplunkRestAppender.html
@@ -114,7 +114,7 @@
 extends ch.qos.logback.core.AppenderBase&lt;ch.qos.logback.classic.spi.ILoggingEvent&gt;</pre>
 <div class="block">LogBack Appender for sending events to Splunk via REST</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
