--- a/javadocs/com/splunk/logging/RestEventData.html
+++ b/javadocs/com/splunk/logging/RestEventData.html
@@ -101,7 +101,7 @@ extends java.lang.Object</pre>
 <div class="block">A helper class to encapsulate URL parameters for submitting events to Splunk
  via REST endpoints</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
