--- a/javadocs/com/splunk/logging/SplunkInput.html
+++ b/javadocs/com/splunk/logging/SplunkInput.html
@@ -105,7 +105,7 @@ extends java.lang.Object</pre>
 <div class="block">Common base class for all Splunk Input types. Currently just has shared logic
  for queuing up events.</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
