--- a/javadocs/com/splunk/logging/jdk/handler/SplunkRawTCPHandler.html
+++ b/javadocs/com/splunk/logging/jdk/handler/SplunkRawTCPHandler.html
@@ -105,7 +105,7 @@
 extends java.util.logging.Handler</pre>
 <div class="block">java.util.logging handler for sending events to Splunk via Raw TCP</div>
 <dl><dt><span class="strong">Author:</span></dt>
-  <dd>Damien Dallimore damien@dtdsoftware.com</dd></dl>
+  <dd>Damien Dallimore damien@baboonbones.com</dd></dl>
 </li>
 </ul>
 </div>
